--- a/my-app/src/css/hero.css
+++ b/my-app/src/css/hero.css
@@ -1,7 +1,7 @@
 .hero--wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
