--- a/my-app/src/css/hero.css
+++ b/my-app/src/css/hero.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 3em;
 }
 
 .hero--main-title {
@@ -43,6 +44,10 @@
   height: 100%;
   max-height: 630.77px;
   max-width: 639.3px;
+}
+
+.hero--food-img {
+  width: 100%;
 }
 
 @media screen and (min-width: 900px) {
