Set up cart functionality
Utilized useContext and useState to create a somewhat complex cart system in which items have the same ID, but there are 3 different sizes for each ID.

This was challenging, but the solution was to create 3 separate state iterations for each "item size" from the menu.

--- a/my-app/src/css/card.css
+++ b/my-app/src/css/card.css
@@ -9,6 +9,8 @@
 }
 
 .card--inner {
+  animation: fadeIn 400ms;
+
   margin: 0.938em;
 }
 
@@ -114,11 +116,21 @@
 }
 
 #ingreds {
+  animation: fadeIn 400ms;
   margin-top: 6px;
   font-size: 1rem;
   font-weight: 400;
   color: var(--main);
   height: 138px;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .centered {
