Basket functionality complete

--- a/my-app/src/css/app.css
+++ b/my-app/src/css/app.css
@@ -4,6 +4,6 @@
   border-radius: 37px;
   background-color: var(--cream);
   color: var(--main);
-  margin: auto;
+  margin: 0 auto;
   padding: 3rem;
 }
