--- a/my-app/src/css/navbar.css
+++ b/my-app/src/css/navbar.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 3em;
+  padding: 3em;
 }
 
 .navbar--menu-container p {
@@ -65,6 +65,7 @@
   font-size: 0.8rem;
   color: var(--cream);
   top: -25%;
+  left: -18%;
   padding: 0.1rem 0.5rem;
 }
 
