--- a/my-app/src/css/footer.css
+++ b/my-app/src/css/footer.css
@@ -4,17 +4,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-radius: 0 0 35px 35px;
+  border-radius: 0 0 33px 33px;
   margin: 0 -3em -3em -3em;
   background: linear-gradient(to bottom, var(--orange) 0%, var(--orange) 100%)
     no-repeat;
-  background-size: calc(100%) calc(55%);
+  background-size: calc(100%) calc(80%);
   background-position: bottom;
 }
 .footer--wrapper h1 {
   padding-top: 1em;
   text-align: center;
-  font-size: 4rem;
+  font-size: 2rem;
   color: var(--brown);
 }
 
@@ -38,9 +38,9 @@
 .footer--info {
   margin: 8rem 3rem 3rem 3rem;
   display: flex;
-  align-items: flex-start;
+  text-align: center;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   max-width: 1250px;
   width: 100%;
 }
@@ -75,4 +75,18 @@
   text-align: center;
   font-size: 0.8rem;
   padding: 1rem 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .footer--wrapper h1 {
+    font-size: 4rem;
+  }
+  .footer--wrapper {
+    background-size: calc(100%) calc(55%);
+  }
+  .footer--info {
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
