--- a/my-app/src/css/menu.css
+++ b/my-app/src/css/menu.css
@@ -8,7 +8,7 @@
 .menu--wrapper h1 {
   padding-top: 1em;
   text-align: center;
-  font-size: 4rem;
+  font-size: 2rem;
   color: var(--brown);
 }
 
@@ -49,4 +49,10 @@
 
 .menu--spacer {
   padding-bottom: 2em;
+}
+
+@media screen and (min-width: 1024px) {
+  .menu--wrapper h1 {
+    font-size: 4rem;
+  }
 }
