--- a/my-app/src/css/card.css
+++ b/my-app/src/css/card.css
@@ -23,7 +23,7 @@
 
 .card--wrapper p {
   font-size: 1.5rem;
-  color: var(--brown);
+  color: var(--brown) !important;
   font-weight: 800;
   margin: 0;
 }
