--- a/my-app/src/css/card.css
+++ b/my-app/src/css/card.css
@@ -58,9 +58,10 @@
   font-weight: 600;
   border: 1px solid black;
   border-radius: 10px;
-  box-shadow: 2px 2px var(--brown);
+  box-shadow: 2px 2px var(--brown) !important;
   transition-duration: 200ms;
   font-family: inherit;
+  margin: 0;
 }
 
 #card--order-btn {
