--- a/my-app/src/css/menu.css
+++ b/my-app/src/css/menu.css
@@ -5,6 +5,10 @@
   justify-content: center;
 }
 
+.menu a {
+  color: var(--brown);
+}
+
 .menu--wrapper h1 {
   padding-top: 1em;
   text-align: center;
