--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -26,7 +26,7 @@ body {
   padding: 0.5rem;
 }
 a {
-  text-decoration: none !important;
+  text-decoration: none;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
