--- a/my-app/src/css/basket.css
+++ b/my-app/src/css/basket.css
@@ -1,4 +1,5 @@
 .basket--wrapper {
+  z-index: 10;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -72,11 +73,11 @@
   background: linear-gradient(transparent, var(--darkcream));
 }
 
-.grid-item img {
+.basket--grid-item img {
   max-width: 94px;
 }
 
-.grid-item h3 {
+.basket--grid-item h3 {
   margin: 0 auto 0 auto;
 }
 
@@ -95,7 +96,7 @@
   margin: 0;
 }
 
-.grid-container {
+.basket--grid-container {
   display: grid;
   grid-template-columns: repeat(2, 8.5rem);
   grid-template-rows: repeat(2, 4rem);
@@ -108,8 +109,8 @@
   margin-top: 0.5rem;
 }
 
-.grid-container p,
-.grid-container h2 {
+.basket--grid-container p,
+.basket--grid-container h2 {
   margin: 0;
 }
 
@@ -168,8 +169,8 @@ hr {
     width: 100%;
     max-width: 400px;
   }
-  .grid-container {
-    grid-template-columns: repeat(2, 10rem);
+  .basket--grid-container {
+    grid-template-columns: repeat(3, 8rem);
     grid-template-rows: repeat(2, 3.5rem);
     gap: 0.5rem;
   }
@@ -178,17 +179,22 @@ hr {
 @media screen and (min-width: 1024px) {
   .basket--content {
     max-width: 650px;
+    min-height: 550px;
     max-height: 750px;
   }
 
-  .grid-container {
+  .basket--grid-container {
     display: grid;
     grid-template-columns: 100px 200px 150px 100px;
     grid-template-rows: 80px;
     gap: 2rem;
   }
 
-  .grid-item img {
+  .basket--grid-item img {
     max-width: 100px;
+  }
+
+  .hide {
+    display: none;
   }
 }
