--- a/my-app/src/css/hero.css
+++ b/my-app/src/css/hero.css
@@ -3,11 +3,12 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 3em;
+  padding: 3em 0;
   gap: 2rem;
 }
 
 .hero--main-title {
+  min-width: 340px;
   max-width: 548px;
 }
 
@@ -42,10 +43,17 @@
 }
 
 .hero--fun-wrapper {
+  display: none;
   width: 100%;
   height: 100%;
   max-height: 630.77px;
   max-width: 639.3px;
+}
+
+#hero--img-mobile img {
+  display: auto;
+  width: 100%;
+  max-width: 450px;
 }
 
 .hero--food-img {
@@ -59,6 +67,14 @@
 }
 
 @media screen and (min-width: 1024px) {
+  #hero--img-mobile {
+    display: none;
+  }
+
+  .hero--fun-wrapper {
+    display: inline-block;
+  }
+
   .hero--main-title h1 {
     font-size: 4rem;
   }
