--- a/my-app/src/css/navbar.css
+++ b/my-app/src/css/navbar.css
@@ -29,7 +29,7 @@
   position: absolute;
   transform: translateX(20px);
   width: 50%;
-  top: 10;
+  top: 3%;
   right: 4rem;
   padding: 3rem;
   background-color: var(--green);
